--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #413D59   ;
-  --secondary-color: #423A42 ;
-  --accent1-color: #894B52;
-  --accent2-color: #BF5A28;
+  --primary-color: #78c5d7   ;
+  --secondary-color: #134266 ;
+  --accent1-color: #fce172;
+  --accent2-color: #ffffff;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Roboto Condensed";
   --paragraph-font: Source Sans Pro, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #413D59;  /* headlines on a white background */ 
+  --headline-color-on-white: #78c5d7;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #413D59; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #78c5d7; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #413D59  ;
+  --paragraph-background-color: #78c5d7 ;
   --nav-link-color: white;
-  --nav-background-color: #894B52;
+  --nav-background-color: #fce172;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #413D59;
+  --nav-hover-background-color: #78c5d7;
 }
 
 
