--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Roboto Condensed";
-  --paragraph-font: Source Sans Pro, Helvetica, sans-serif;
+  --paragraph-font: 'Source Sans Pro', Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #78c5d7;  /* headlines on a white background */ 
