--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,6 +4,12 @@ div#content {
         max-width: 1600px;
         margin: 0 auto; 
       }
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a {
     text-align: center;
     color: #fcfbfb;
@@ -23,10 +29,13 @@ nav a:hover {
 
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 header {
-    background-color: #134266;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 .home-title {
@@ -36,18 +45,37 @@ header {
     margin-top: 10px;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-img {
     width: 100%
 }
 
+#hero-msg {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    margin-top: 100px;
+}
+
 #hero-msg h1 {
+    color:white;
     text-align: center;
     font-family: 'Source Sans Pro', Helvetica, sans-serif;
 }
 
 #hero-msg h4 {
     text-align: center;
-    color:#134266;
+    color:white;
     font-family: 'Source Sans Pro', Helvetica, sans-serif;
 }
 
@@ -65,9 +93,16 @@ main section img {
     box-sizing: border-box;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
 div#background {
     height: 725px; 
-    background-color:#78C5D7
+    background-color:#78C5D7;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -79,6 +114,21 @@ body {
 
 .card-img {
     border: 10px solid #111629;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 h2 {
@@ -107,14 +157,31 @@ h2 {
 
 }
 
-.rivers-card, .camping-card, .rapids-card{
+.rivers-card {
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 footer {
     background-color: #134266;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer h3 {
@@ -137,6 +204,9 @@ footer a:hover {
     background-color:#FCE172;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .msg h2 {
@@ -152,4 +222,46 @@ footer a:hover {
 
 footer .social img {
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
