--- a/wwr/Portfolio/styles/photography.css
+++ b/wwr/Portfolio/styles/photography.css
@@ -39,6 +39,7 @@
   padding: 0 4px;
 }
 
+/* Create four equal columns that sits next to each other */
 .column {
   flex: 25%;
   max-width: 25%;
@@ -51,6 +52,7 @@
   width: 100%;
 }
 
+/* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
     flex: 50%;
@@ -58,7 +60,7 @@
   }
 }
 
-
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column {
     flex: 100%;
