--- a/wwr/Portfolio/styles/home.css
+++ b/wwr/Portfolio/styles/home.css
@@ -100,6 +100,60 @@ p {
 }
 
 footer {
-	text-align: center;
+    background-color: #748F84;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer h3 {
+    color: white;
     font-family: var(--paragraph-font);
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+    font-family: var(--paragraph-font);
+}
+
+footer a:hover {
+    color: whitesmoke;
+    text-decoration: underline
+}
+
+.msg {
+    background-color:whitesmoke;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg h2 {
+    color:#111629;
+    font-family: var(--paragraph-font);
+}
+
+.msg p {
+    color:#111629;
+    font-size: 1em;
+    padding-bottom: 15px;
+}
+
+footer .social img {
+    padding-top: 15px;
+    
+}
+
+@media screen and (max-width: 900px) {
+    nav, footer {
+        flex-direction: column;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
