--- a/wwr/Portfolio/styles/graphicdesign.css
+++ b/wwr/Portfolio/styles/graphicdesign.css
@@ -33,37 +33,132 @@
     margin: 0px 30px;
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
+.hero {
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	min-height: 80vh;
+	background: #C5D4D2;
+    font-family: var(--heading-font);
 }
 
-/* Create four equal columns that sits next to each other */
+.h1 {
+    font-size: 6em;
+    margin: 0 90px;
+    text-align: center;
+    font-family: var(--paragraph-font);
+}
+
+.subnav {
+	background: #fff;
+	border-bottom: 1px solid #222;
+}
+
+.nav__container {
+    align-items: baseline;
+    display: flex;
+    margin: 0 60px;
+    padding: 15px 0;
+    font-family: var(--paragraph-font);
+}
+.nav__title {
+    font-size: 1.25em;
+    color: #fff;
+    font-family: var(--paragraph-font);
+}
+.nav__list {
+    margin: 0 15px;
+    color: #fff;
+    font-family: var(--paragraph-font);
+}
+.nav__item {
+    display: inline-block;
+    margin: 0 8px;
+    padding: 5px;
+    color: #fff;
+}
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
+    float: left;
+    width: 25%;
+    padding: 5px;
   }
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  h2 {
+    font-size: 3em;
+    margin-bottom: 15px;
+    font-family: var(--paragraph-font);
+}
+p {
+    line-height: 1.625em;
+    margin: 0 auto;
+    max-width: 480px;
+    font-family: var(--paragraph-font);
 }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
+footer {
+    background-color: #748F84;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer h3 {
+    color: white;
+    font-family: var(--paragraph-font);
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+    font-family: var(--paragraph-font);
+}
+
+footer a:hover {
+    color: whitesmoke;
+    text-decoration: underline
+}
+
+.msg {
+    background-color:whitesmoke;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg h2 {
+    color:#111629;
+    font-family: var(--paragraph-font);
+}
+
+.msg p {
+    color:#111629;
+    font-size: 1em;
+    padding-bottom: 15px;
+}
+
+footer .social img {
+    padding-top: 15px;
+    
+}
+
+@media screen and (max-width: 900px) {
+    nav, footer {
+        flex-direction: column;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
