--- a/wwr/rafting/styles/rivers.css
+++ b/wwr/rafting/styles/rivers.css
@@ -42,13 +42,14 @@ header {
     color:#134266;
     font-family: 'Roboto Condensed', Helvetica, sans-serif;
     font-size: 2em;
-    margin-top: 10px;
+    margin-top: 70px;
 }
 
 #littlecolorado {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
+    margin-bottom: 1rem;
 }
 
 #littlecolorado-box {
@@ -58,7 +59,8 @@ header {
 }
 
 #littlecolorado-img {
-    width: 100%
+    width: 100%;
+    filter: brightness(80%);
 }
 
 #littlecolorado-msg {
@@ -70,6 +72,7 @@ header {
 #littlecolorado-msg h1 {
     color:white;
     text-align: center;
+    font-size: 250%;
     font-family: 'Source Sans Pro', Helvetica, sans-serif;
 }
 
@@ -77,6 +80,59 @@ header {
     text-align: center;
     color:white;
     font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-weight: 400;
+}
+
+#utah {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: 50px;
+}
+
+#utah-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#utah-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    height: 70%;
+    filter: brightness(80%);
+    border-radius: 10px;
+    
+}
+
+#utah-msg {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    margin-top: 200px;
+}
+
+#utah-msg h1 {
+    color:white;
+    text-align: center;
+    font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-size: 250%;
+}
+
+#utah-content {
+    display: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -150px;
+    width: 70%;
+}
+
+#utah-content h4 {
+    color:#134266;
+    text-align: left;
+    font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 150%;
 }
 
 main section {
