--- a/wwr/rafting/styles/rivers.css
+++ b/wwr/rafting/styles/rivers.css
@@ -120,7 +120,6 @@ header {
 }
 
 #utah-content {
-    display: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: -150px;
@@ -134,6 +133,107 @@ header {
     font-weight: 400;
     font-size: 150%;
 }
+
+#idaho {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: 50px;
+}
+
+#idaho-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#idaho-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    height: 70%;
+    filter: brightness(80%);
+    border-radius: 10px;
+}
+
+#idaho-msg {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    margin-top: 200px;
+}
+
+#idaho-msg h1 {
+    color:white;
+    text-align: center;
+    font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-size: 250%;
+}
+
+#idaho-content {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -150px;
+    width: 70%;
+}
+
+#idaho-content h4 {
+    color:#134266;
+    text-align: left;
+    font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 150%;
+}
+
+#arizona {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: 50px;
+}
+
+#arizona-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#arizona-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    height: 70%;
+    filter: brightness(80%);
+    border-radius: 10px;
+}
+
+#arizona-msg {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    margin-top: 200px;
+}
+
+#arizona-msg h1 {
+    color:white;
+    text-align: center;
+    font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-size: 250%;
+}
+
+#arizona-content {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -150px;
+    width: 70%;
+}
+
+#arizona-content h4 {
+    color:#134266;
+    text-align: left;
+    font-family: 'Source Sans Pro', Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 150%;
+}
+
 
 main section {
     text-align: center;
