--- a/wwr/Portfolio/styles/home.css
+++ b/wwr/Portfolio/styles/home.css
@@ -24,29 +24,78 @@
 	background: #748F84;
 }
 
-.nav__title {
-    margin: 0px 30px;
-}
-
 .nav__item {
     display: inline-block;
     margin: 0px 30px;
+    text-decoration: none; 
+}
+
+a:visited { 
+    text-decoration: none; 
+    color: white; 
+   }
+
+a:hover { 
+    text-decoration: none;
+    color: white;  
+}
+
+a:focus { 
+    text-decoration: none; 
+    color: white; 
+}
+   
+a:hover, a:active { 
+    text-decoration: none;
+    color: white;  
+}
+
+.logo {
+    width:50px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#logo_link{
+    padding-top: 10px;
+}
+
+.line {
+    margin-left: auto;
+    margin-top: 50px;
+    max-height: 764px;
+    max-width: 791px;
+    width: 50%;
+    position: absolute;
+    z-index: 2;
 }
 
 .hero {
 	display: grid;
 	justify-content: center;
 	align-items: center;
-	min-height: 80vh;
+	min-height: 40vh;
 	background: #C5D4D2;
     font-family: var(--heading-font);
+    text-decoration: none;
+    position: relative;
 }
 
-.h1 {
-    font-size: 6em;
+.hero h1 {
+    font-size: 3em;
     margin: 0 90px;
     text-align: center;
     font-family: var(--paragraph-font);
+    font-weight: 800;
+    margin-top: 40px;
+}
+
+.hero h2 {
+    font-size: 1.8em;
+    text-align: center;
+    font-family: var(--paragraph-font);
+    font-weight: 200;
+    margin-top: -40px;
 }
 
 .subnav {
@@ -98,6 +147,31 @@ p {
     max-width: 480px;
     font-family: var(--paragraph-font);
 }
+
+.btn {
+    border: 2px solid black;
+    background-color: #C5D4D2;
+    color: black;
+    border-radius: 15px;
+    padding: 12px 25px;
+    font-size: 18px;
+    margin-top: -20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+  
+  /* button */
+  .resume {
+    border-color: #748F84;
+    color: #748F84;
+  }
+  
+  .resume:hover {
+    background-color: #748F84;
+    color: white;
+  }
 
 footer {
     background-color: #748F84;
