--- a/wwr/Portfolio/styles/home.css
+++ b/wwr/Portfolio/styles/home.css
@@ -66,8 +66,9 @@ a:hover, a:active {
     max-height: 764px;
     max-width: 791px;
     width: 50%;
+    height: 100%;
     position: absolute;
-    z-index: 2;
+    z-index: 1;
 }
 
 .hero {
@@ -134,6 +135,7 @@ a:hover, a:active {
 	background-color: #D7ECF5;
 	text-align: center;
     font-family: var(--heading-font);
+
 }
 
 h2 {
