--- a/wwr/Portfolio/styles/graphicdesign.css
+++ b/wwr/Portfolio/styles/graphicdesign.css
@@ -24,22 +24,73 @@
 	background: #748F84;
 }
 
-.nav__title {
-    margin: 0px 30px;
-}
-
 .nav__item {
     display: inline-block;
     margin: 0px 30px;
+}
+
+a:visited { 
+    text-decoration: none; 
+    color: white; 
+   }
+
+a:hover { 
+    text-decoration: none;
+    color: white;  
+}
+
+a:focus { 
+    text-decoration: none; 
+    color: white; 
+}
+   
+a:hover, a:active { 
+    text-decoration: none;
+    color: white;  
+}
+
+.logo {
+    width:50px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#logo_link{
+    padding-top: 10px;
 }
 
 .hero {
 	display: grid;
 	justify-content: center;
 	align-items: center;
-	min-height: 80vh;
+	min-height: 23vh;
 	background: #C5D4D2;
     font-family: var(--heading-font);
+    text-decoration: none;
+    position: relative;
+}
+
+.hero h1 {
+    font-size: 3em;
+    margin:auto;
+    text-align: center;
+    font-family: var(--paragraph-font);
+    font-weight: 800;
+    margin-top: 50px;
+    position: relative;
+    display: flex;
+}
+
+.title {
+	display: grid;
+	justify-content: left;
+    margin:auto;
+    margin-left: 3em;
+    margin-top: 5em;
+	min-height: 10vh;
+    font-family: var(--heading-font);
+    text-decoration: none;
+    position: relative;
 }
 
 .h1 {
@@ -78,18 +129,77 @@
     color: #fff;
 }
 
-/* Three image containers (use 25% for four, and 50% for two, etc) */
+.row,
+.row > .column {
+  padding: 8px;
+}
+
+/* Create four equal columns that floats next to each other */
 .column {
-    float: left;
-    width: 25%;
-    padding: 5px;
+  float: left;
+  width: 25%;
+}
+
+.row,
+.row > .column2 {
+  padding: 8px;
+}
+
+/* Create four equal columns that floats next to each other */
+.column2 {
+  float: left;
+  width: 25%;
+}
+
+/* Clear floats after rows */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Content */
+.content {
+  background-color: #E8EEED;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+
+/* Content */
+.content2 {
+    background-color: #E8EEED;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 900px) {
+  .column {
+    width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 900px) {
+    .column2 {
+      width: 50%;
+    }
   }
   
-  /* Clear floats after image containers */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column2 {
+      width: 100%;
+    }
   }
 
   h2 {
@@ -97,11 +207,20 @@
     margin-bottom: 15px;
     font-family: var(--paragraph-font);
 }
-p {
-    line-height: 1.625em;
-    margin: 0 auto;
-    max-width: 480px;
+
+h3 {
+    font-size: 1.5em;
+    margin-bottom: 15px;
+    margin-top: 10px;
     font-family: var(--paragraph-font);
+}
+
+p {
+    font-size: 14pt;
+    margin-bottom: 15px;
+    margin-top: -10px;
+    font-family: var(--paragraph-font);
+    font-weight: 200;
 }
 
 footer {
