--- a/wwr/Portfolio/styles/photography.css
+++ b/wwr/Portfolio/styles/photography.css
@@ -24,22 +24,73 @@
 	background: #748F84;
 }
 
-.nav__title {
-    margin: 0px 30px;
-}
-
 .nav__item {
     display: inline-block;
     margin: 0px 30px;
+}
+
+a:visited { 
+  text-decoration: none; 
+  color: white; 
+ }
+
+a:hover { 
+  text-decoration: none;
+  color: white;  
+}
+
+a:focus { 
+  text-decoration: none; 
+  color: white; 
+}
+ 
+a:hover, a:active { 
+  text-decoration: none;
+  color: white;  
+}
+
+.logo {
+  width:50px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+#logo_link{
+  padding-top: 10px;
 }
 
 .hero {
 	display: grid;
 	justify-content: center;
 	align-items: center;
-	min-height: 80vh;
+	min-height: 23vh;
 	background: #C5D4D2;
     font-family: var(--heading-font);
+    text-decoration: none;
+    position: relative;
+}
+
+.hero h1 {
+  font-size: 3em;
+  margin:auto;
+  text-align: center;
+  font-family: var(--paragraph-font);
+  font-weight: 800;
+  margin-top: 50px;
+  position: relative;
+  display: flex;
+}
+
+.title {
+	display: grid;
+	justify-content: left;
+    margin:auto;
+    margin-left: 3em;
+    margin-top: 5em;
+	min-height: 10vh;
+    font-family: var(--heading-font);
+    text-decoration: none;
+    position: relative;
 }
 
 .h1 {
@@ -47,6 +98,16 @@
     margin: 0 90px;
     text-align: center;
     font-family: var(--paragraph-font);
+}
+
+.title p {
+  font-size: 18px;
+  margin:auto;
+    text-align: left;
+    font-family: var(--paragraph-font);
+    font-weight: 200;
+    margin-top: -10px;
+    margin-bottom: 20px;
 }
 
 .subnav {
@@ -86,15 +147,14 @@
 
 /* Create four equal columns that sits next to each other */
 .column {
-  flex: 25%;
-  max-width: 25%;
+  flex: 50%;
   padding: 0 4px;
 }
 
 .column img {
   margin-top: 8px;
   vertical-align: middle;
-  width: 100%;
+  width: 20%;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
