--- a/wwr/Portfolio/styles/photography.css
+++ b/wwr/Portfolio/styles/photography.css
@@ -185,6 +185,8 @@ footer {
 footer h3 {
   color: white;
   font-family: var(--paragraph-font);
+  font-weight: 300;
+  font-size: large;
 }
 
 footer a {
